Fixed delete note button not visible

--- a/app/main.css
+++ b/app/main.css
@@ -112,6 +112,6 @@ body {
   visibility: hidden;
 }
 
-.note:hover .delete-note {
+.note:hover .delete {
   visibility: visible;
 }
